Migrate Gradle script to Jute